<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nb_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/nb_nutrition"
        android:enabled="true"
        android:icon="@drawable/nutrition"
        android:title="@string/title_nutrition"/>
    <item
        android:id="@+id/nb_camera"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_camera"/>
    <item
        android:id="@+id/nb_contact"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_contacts_24"
        android:title="@string/title_contact"/>
</menu>