<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AppGym">
    <item
        android:id="@+id/mn_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/share"/>

    <item
        android:id="@+id/mn_count"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"
        android:title="@string/count"/>

    <item
        android:id="@+id/mn_information"
        app:showAsAction="never"
        android:title="@string/information"/>

    <item
        android:id="@+id/mn_configuration"
        app:showAsAction="never"
        android:title="@string/configuration"/>

</menu>