<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appgym.AppGym">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/power"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:background="@color/blue_500"/>

                <ImageButton
                    android:id="@+id/btn_power"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/musculo"
                    android:layout_marginTop="10dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/strong"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:background="@color/blue_500"/>

                <ImageButton
                    android:id="@+id/btn_strong"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/fitness"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/yoga"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:background="@color/blue_500"/>

                <ImageButton
                    android:id="@+id/btn_yoga"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/meditation"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cardio"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:background="@color/blue_500"/>

                <ImageButton
                    android:id="@+id/btn_cardio"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/cardio"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fitness"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:background="@color/blue_500"/>

                <ImageButton
                    android:id="@+id/btn_fitness"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/dumbbells"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>